src/objects/QPMS__Inspect_Sample_Criteria__c.object
<CustomObject>
    <description>This is the child object of Inspect Sample object.</description>
    <fields>
        <fullName>QPMS__Criteria_Name__c</fullName>
        <label>Criteria Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Criteria</label>
        <referenceTo>QPMS__Criteria__c</referenceTo>
        <relationshipLabel>Inspect Sample Criterias</relationshipLabel>
        <relationshipName>Inspect_Sample_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>This will hold the description.</description>
        <label>Description</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>This is unique External Id field.</description>
        <label>External Id</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Inspect_Sample__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is master details to Inspect sample object</description>
        <label>Inspect Sample</label>
        <referenceTo>QPMS__Inspect_Sample__c</referenceTo>
        <relationshipLabel>Inspect Sample Criterias</relationshipLabel>
        <relationshipName>Inspect_Sample_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Criteria_Type__c</fullName>
        <description>This is used to select Inspection Criteria Type</description>
        <label>Inspection Criteria Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attribute</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Id__c</fullName>
        <description>This is used to hold inspection record Id</description>
        <formula>QPMS__Inspect_Sample__r.QPMS__Inspection_Id__c</formula>
        <label>Inspection Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Task__c</fullName>
        <formula>QPMS__Inspect_Sample__r.QPMS__Inspection_Task__c</formula>
        <label>Inspection Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Instruction__c</fullName>
        <description>Instruction</description>
        <label>Instruction</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Measurement__c</fullName>
        <description>This will store value of Measurement of samples</description>
        <label>Measurement</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Measurement__c</fullName>
        <description>New Measurement</description>
        <label>New Measurement</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Result__c</fullName>
        <description>Result</description>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Sample_Number__c</fullName>
        <formula>QPMS__Inspect_Sample__r.QPMS__Sample__c</formula>
        <label>Sample Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Severity_Name__c</fullName>
        <formula>QPMS__Severity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Severity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Severity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Severity</description>
        <label>Severity</label>
        <referenceTo>QPMS__Risk_Severity__c</referenceTo>
        <relationshipLabel>Inspect Sample Criterias</relationshipLabel>
        <relationshipName>Inspect_Sample_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>Status for sample criteria</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Tolerance_Minus__c</fullName>
        <description>This will store Tolerance (-) value</description>
        <label>Tolerance (-)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Tolerance_Plus__c</fullName>
        <description>This will store Tolerance(+) value</description>
        <label>Tolerance (+)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mm</fullName>
                </value>
                <value>
                    <fullName>inch</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                </value>
                <value>
                    <fullName>lbs</fullName>
                </value>
                <value>
                    <fullName>cm</fullName>
                </value>
                <value>
                    <fullName>m</fullName>
                </value>
                <value>
                    <fullName>g</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Inspect Sample Criteria</label>
    <nameField>
        <displayFormat>ISCN-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspect Sample Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>